# PatternMatching

./: README.md
PatternMatching/: CMakeLists.txt  Trie.cpp  Trie.h  main.cpp
PatternMatching11/: CMakeLists.txt  Trie.cpp  Trie.h  main.cpp
